Lucene tests in `tests` module are fixed.